--- a/app/src/main/res/layout/add_new_task.xml
+++ b/app/src/main/res/layout/add_new_task.xml
@@ -15,6 +15,8 @@
         >
     </EditText>
     <Button
+
+        android:id="@+id/addbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText"
